# neural-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
neural_protocol/: __init__.py
neural_protocol/agent/: __init__.py  base.py  base_ws.py
neural_protocol/agents/: __init__.py  billing.py  billing_ws.py  sales.py  sales_ws.py  support.py  support_ws.py
neural_protocol/core/: __init__.py  identity.py  signal.py  synapse.py
neural_protocol/demo/: benchmark.py  run_demo.py  stress.py
neural_protocol/tests/: test_agents.py  test_core.py  test_transport.py
neural_protocol/transport/: __init__.py  base.py  local.py  websocket.py
neural_protocol/utils/: __init__.py  config.py  constants.py  logging.py
